2011-11-04  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Ignore '-2' if passed to build-webkit. WebKit2 is now built by default.

        Reviewed by Simon Hausmann.

        * Scripts/build-webkit:

2011-11-04  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Use web view title as window title in MiniBrowser
        https://bugs.webkit.org/show_bug.cgi?id=71544

        Reviewed by Philippe Normand.

        * MiniBrowser/gtk/BrowserWindow.c:
        (webViewURIChanged): Removed extra space.
        (webViewTitleChanged): Set window title using
        webkit_web_view_get_title().
        (browser_window_init): Set initial default window title.
        (browserWindowConstructed): Connect to WebView notify::title
        signal.

2011-11-04  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Refactor and clean up the qmake build system

        The qmake build system has accumulated a bit of cruft and redundancy
        over time. There's also a fairly tight coupling between how to build
        the various targets, and _what_ to build, making it harder to add new
        rules or sources. This patch aims to elevate these issues somewhat.

        This is a short-list of the changes:

          * The rules for how to build targets are now mostly contained as
            prf-files in Tools/qmake/mkspecs/features. Using mkspecs also
            allows us to do pre- and post-processing of each project file,
            which helps to clean up the actual project files.

          * Derived sources are no longer generated as a separate make-step
            but is part of each target's project file as a subdir. Makefile
            rules are used to ensure that we run make on the derived sources
            before running qmake on the actual target makefile. This makes
            it easier to keep a proper dependency between derived sources
            and the target.
