@@ -91,6 +91,7 @@ my $isChromium;
 my $isChromiumAndroid;
 my $isChromiumMacMake;
 my $isInspectorFrontend;
+my $isWK2;
 
 # Variables for Win32 support
 my $vcBuildPath;
@@ -771,6 +772,19 @@ sub checkForArgumentAndRemoveFromArrayRef
         splice(@$arrayRef, $index, 1);
     }
     return $#indicesToRemove > -1;
+}
+
+sub isWK2()
+{
+    if (defined($isWK2)) {
+        return $isWK2;
+    }
+    if (checkForArgumentAndRemoveFromARGV("-2")) {
+        $isWK2 = 1;
+    } else {
+        $isWK2 = 0;
+    }
+    return $isWK2;
 }
 
 sub determineIsQt()
